Interview preparation using lambda expression.